# generic-illusion

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  generic-illusion.cabal  stack.yaml
src/: GenericIllusion.hs
test/: Spec.hs
